Bug 283115 - "Edit" duplicates the message if changes are not saved
Summary: "Edit" duplicates the message if changes are not saved
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: Git (master)
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 286918 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-09-30 23:59 UTC by Christophe Marin
Modified: 2011-11-18 13:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2011-09-30 23:59:07 UTC
Using master, tested with a DIMAP account

- Select a message, 
- RMB / Edit message
- Close the message window without doing any change

Result:
The message is duplicated
Comment 1 Laurent Montel 2011-10-05 16:31:51 UTC
I can confirm it.
Comment 2 Laurent Montel 2011-10-20 14:25:14 UTC
Git commit 67d6a93ce84e4c2b1c5fdcbfa94407fa5ae9f12f by Montel Laurent.
Committed on 20/10/2011 at 16:24.
Pushed by mlaurent into branch 'master'.

Fix 283115 - "Edit" duplicates the message if changes are not saved

FIXED-IN:4.7.3
BUG: 283115

M  +1    -1    kmail/kmcomposewin.cpp

http://commits.kde.org/kdepim/67d6a93ce84e4c2b1c5fdcbfa94407fa5ae9f12f
Comment 3 Laurent Montel 2011-10-20 14:25:55 UTC
Git commit f893ea4d2288fb29d9dcf406faaa650bcb1284b1 by Montel Laurent.
Committed on 20/10/2011 at 16:24.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix 283115 - "Edit" duplicates the message if changes are not saved

FIXED-IN:4.7.3
BUG: 283115
(cherry picked from commit 67d6a93ce84e4c2b1c5fdcbfa94407fa5ae9f12f)

M  +1    -1    kmail/kmcomposewin.cpp

http://commits.kde.org/kdepim/f893ea4d2288fb29d9dcf406faaa650bcb1284b1
Comment 4 Christophe Marin 2011-11-18 13:18:46 UTC
*** Bug 286918 has been marked as a duplicate of this bug. ***