Fix 283115 - "Edit" duplicates the message if changes are not saved

FIXED-IN:4.7.3
BUG: 283115